--- a/vignettes/libr-datastep.Rmd
+++ b/vignettes/libr-datastep.Rmd
@@ -24,6 +24,8 @@ processing.
 #### Example 1: Simple Data Step
 Here is an example of a simple data step:
 ```{r eval=FALSE, echo=TRUE}
+library(libr)
+
 # Add some columns to mtcars using data step logic
 df <- datastep(mtcars[1:10, 1:3], {
 
@@ -64,6 +66,8 @@ parameter also allows you to order the resulting columns.
 
 #### Example 2: Keeping Data Step Variables
 ```{r eval=FALSE, echo=TRUE}
+library(libr)
+
 # Keep and order output columns 
 df <- datastep(mtcars[1:10,], 
   keep = c("mpg", "cyl", "disp", "mpgcat", "recdt"), {
@@ -103,6 +107,8 @@ conditions based on the value of the previous row.
 
 #### Example 3: Drop, Retain, and Rename Parameters
 ```{r eval=FALSE, echo=TRUE}
+library(libr)
+
 df <- datastep(mtcars[1:10, ],
                drop = c("disp", "hp", "drat", "qsec",
                         "vs", "am", "gear", "carb"),
@@ -139,6 +145,8 @@ turn the sort check off, set the `sort_check` parameter to FALSE.
 
 #### Example 4: By Groups
 ```{r eval=FALSE, echo=TRUE}
+library(libr)
+
 # Identify start and end of by-groups
 df <- datastep(mtcars[1:10,], 
   keep = c("mpg", "cyl", "gear", "grp"), 
@@ -181,6 +189,8 @@ is an example of such a scenario:
 
 #### Example 5: Calculate Block
 ```{r eval=FALSE, echo=TRUE}
+library(libr)
+
 # Categorize mpg as above or below the mean
 df <- datastep(mtcars, 
   keep = c("mpg", "cyl", "mean_mpg", "mpgcat"), 
@@ -218,6 +228,7 @@ data frame from Example 5, but with a **dplyr** pipeline.
 
 #### Example 6: Data Pipeline
 ```{r eval=FALSE, echo=TRUE}
+library(libr)
 library(dplyr)
 library(magrittr)
 
