--- a/vignettes/libr-eq.Rmd
+++ b/vignettes/libr-eq.Rmd
@@ -64,4 +64,4 @@ v1 %eq% NA            # FALSE
 1 %eq% v1             # FALSE
 ```
 
-Next: [Disclaimer](https://libr.r-sassy.org/articles/libr-disclaimer.html)
+Next: [Disclaimer](libr-disclaimer.html)
