--- a/vignettes/libr.Rmd
+++ b/vignettes/libr.Rmd
@@ -77,10 +77,10 @@ The functions related to import specs are as follows:
 For next steps, please review the examples provided in the articles
 section of this web site.  Those articles include:
 
-* [Basic Library Operations](https://libr.r-sassy.org/articles/libr-basics.html)
-* [Library Management](https://libr.r-sassy.org/articles/libr-management.html)
-* [Data Step Operations](https://libr.r-sassy.org/articles/libr-datastep.html)
-* [Enhanced Equality](https://libr.r-sassy.org/articles/libr-eq.html)
+* [Basic Library Operations](libr-basics.html)
+* [Library Management](libr-management.html)
+* [Data Step Operations](libr-datastep.html)
+* [Enhanced Equality](libr-eq.html)
 
 
 
